// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invert binary tree should reverse nodes in a tree with height 3 1`] = `
Object {
  "left": Object {
    "left": null,
    "right": Object {
      "left": null,
      "right": null,
      "value": 5,
    },
    "value": 6,
  },
  "right": Object {
    "left": Object {
      "left": null,
      "right": null,
      "value": 3,
    },
    "right": Object {
      "left": null,
      "right": null,
      "value": 1,
    },
    "value": 2,
  },
  "value": 4,
}
`;

exports[`invert binary tree should reverse the nodes in a tree with height 2 1`] = `
Object {
  "left": Object {
    "left": null,
    "right": null,
    "value": 3,
  },
  "right": Object {
    "left": null,
    "right": null,
    "value": 1,
  },
  "value": 2,
}
`;
